some simple fixes so the style looks okay even without the classic Plone stylesheet
svn path=/plone.formwidget.contenttree/trunk/; revision=35522

--- a/plone/formwidget/contenttree/jquery-contenttree/contenttree.css
+++ b/plone/formwidget/contenttree/jquery-contenttree/contenttree.css
@@ -12,6 +12,18 @@
     border: 1px solid #8CACBB;
 }
 
+.contenttreeWidget li {
+    display: block;
+    padding-left: 1em;
+}
+
+.contenttreeWidget .navTreeCurrentItem {
+    font-weight: bold;
+}
+.contenttreeWidget .navTreeCurrentItem li {
+    font-weight: normal;
+}
+
 .contenttreeWidget li a {
     border-bottom: solid 1px transparent;
 }
