fixed path to static images
svn path=/plone.formwidget.contenttree/branches/jquery-dynatree/; revision=47688

--- a/plone/formwidget/contenttree/dynatree/ui.dynatree.css
+++ b/plone/formwidget/contenttree/dynatree/ui.dynatree.css
@@ -31,7 +31,7 @@ ul.dynatree-container li
 	background-attachment: scroll;
 	background-color: transparent;
 	background-repeat: repeat-y;
-	background-image: url("vline.gif");
+	background-image: url("++resource++plone.formwidget.contenttree/vline.gif");
 	background-position: 0 0;
 	/*
 	background-image: url("icons_96x256.gif");
@@ -80,7 +80,7 @@ span.dynatree-drag-helper-img,
 	vertical-align: top;
 	background-repeat: no-repeat;
 	background-position: left;
-	background-image: url("icons.gif");
+	background-image: url("++resource++plone.formwidget.contenttree/icons.gif");
 	background-position: 0 0;
 }
 
@@ -145,7 +145,7 @@ span.dynatree-expander
 .dynatree-loading span.dynatree-expander  /* 'Loading' status overrides all others */
 {
 	background-position: 0 0;
-	background-image: url("loading.gif");
+	background-image: url("++resource++plone.formwidget.contenttree/loading.gif");
 }
 
 
@@ -243,7 +243,7 @@ span.dynatree-icon /* Default icon */
 
 .dynatree-statusnode-wait span.dynatree-icon
 {
-	background-image: url("loading.gif");
+	background-image: url("++resource++plone.formwidget.contenttree/loading.gif");
 }
 
 .dynatree-statusnode-error span.dynatree-icon
